# tr-autonomy-2-HugoIngelsson

src/spinnyrobot/freecam/: freecam.py
src/viewer_node/: CMakeLists.txt  package.xml
src/viewer_node/src/: sol.cpp  viewer_node.cpp  viewer_node.h
src/yoursolution/: CMakeLists.txt
src/yoursolution/src/: sol.h
